--- a/todo.org
+++ b/todo.org
@@ -1,23 +1,46 @@
 TODO / WISHLIST
 
-The following items are not ordered by amount of work.
+The following items are not ordered in any way.
+
+Make sure this is not a vaporware product.
+Learn from RMS.
+Release early and release often.
+Make everything testable and tested.
+Don't auto-update on start but make regular releases as simple as possible.
+This is a work tool that needs to work. Don't waste your work time.
 
 
-* start with fullscreen
-* theme-ing
-* tiling emacs "frames"
-* platform-support (macos, linux)
+* DONE start with fullscreen
+* DONE theme-ing
+- couple of standard themes from other editors
+- save space (minimal scrollbars)
+- switch light and dark theme
+- review fonts (Monaco?)
+Themes added using package.el
+- added timu
+- added twilight
+- added twilight-bright
+- added zenburn
+* TODO sidebar
+- like spacemacs ("embedded")
+- nice icons (see spacemacs and some icon config)
+- review sidebar reuse a la VS Code (files, git, other extensions)
+- toggle on and off
+* TODO tiling emacs "frames"
+- move between frames (e.g. windmove)
+- snapshot/save layouts
+* TODO platform-support (macos, linux)
 dig out and support simple feature checks based on the host os
 
-* command-prompt
+* TODO command-prompt
 have something like META-SHIFT-P on VS Code (essentially minibuffer in the middle)
 have a look at ivy-posframe
 
-* remote ssh
-do simple remote things you'd do in a terminal now
+* TODO remote ssh
+- do simple remote things you'd do in a terminal now
+- there's tramp, eterm, etc
 
-
-* programming-language/framework support
+* TODO programming-language/framework support
 This is a big one. Tbd: prioritize, figure out cross cutting concerns,
 bundle up configs to different ecosystems, etc.
 
